k8s/mongodb-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-order
  labels:
    app: mongodb-order
spec:
  ports:
  - port: 27017
    targetPort: 27017
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb-order
