k8s/mongodb-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-product
  labels:
    app: mongodb-product
spec:
  ports:
  - port: 27017
    targetPort: 27017
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb-product
